2006-10-05  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Fixed library versioning mistake.  Up revision,
	not current.
	
2006-09-25  Albert Chu  <chu11@llnl.gov>

	* configure.ac, src/cerebrod/, src/cerebro-stat: Use sizeof checks
	to remove cross-platform compiler warnings.
	
2006-09-22  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker_data.c (_metric_is_updated): Fix
	mem-leak.

	* src/cerebrod/cerebrod_listener_data.c: Support multiple monitor
	modules per metric name.

	* src/cerebrod, src/cerebro-stat: Fix compiler warnings.
	
2006-09-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules): Fix typo.

	* src/libs/modules/config_module.c,
	src/libs/modules/metric_module.c,
	src/libs/modules/monitor_module.c: Remove forgotten localisms.

	* src/libs/modules/metric_module.c: Add forgotten modules.
	
	* src/modules/metric/Makefile.am: Fix typo.
	
2006-09-19  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules):
	Fix typo.
	
2006-09-05  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Fix
	mem-leak corner case.
	
2006-09-01  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_memory.c (_read_memory):
	Replace asserts with DBG calls.

	* man/cerebro_module.3.in: Fixed typo.
	
2006-08-27  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_memory.h,
	src/modules/metric/cerebro_metric_memory.c: New files.

	* src/modules/metric/cerebro_metric_memtotal.c,
	src/modules/metric/cerebro_metric_memused.c,
	src/modules/metric/cerebro_metric_memfree.c,
	src/modules/metric/cerebro_metric_swaptotal.c,
	src/modules/metric/cerebro_metric_swapused.c,
	src/modules/metric/cerebro_metric_swapfree.c: Adjusted to use
	common function.

	* src/modules/metric/Makefile.am: Adjust for new files.

	* src/libs/common/marshall.h, src/libs/common/marshall.c
	(marshall_int64, marshall_u_int64, unmarshall_int64,